♻️ Rename the source code directory to be more clear and readable.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
   rev: v1.15.0
   hooks:
     - id: mypy
-      package: <your lib src dir>,test
+      package: slack_mcp,test
 #      exclude: ^test/unit_test.{1,64}.py
       args:
 #        - --strict
