--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 [pytest]
 minversion = 7.0.0
 addopts =
-    --cov=<Your library source code folder>
+    --cov=slack_mcp/
     --cov-config=./.coveragerc
     -r a
     -vv
