--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectName=<your lib name>
 sonar.projectVersion=0.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=<Your library source code folder>
+sonar.sources=slack_mcp/
 
 # Python test coverage settings
 sonar.python.coverage.reportPaths=coverage*.xml
