--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 # Global options:
 
 [mypy]
-packages = <Your library source code folder>,test
+packages = slack_mcp,test
 exclude = (?x)(
     test/unit_test.{1,64}.py    # Ignore the code of unit test because of the usage of mock
   )
