--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = []
 
 [tool.poetry]
 packages = [
-    { include = "<Your library source code folder>" },
+    { include = "slack_mcp/" },
 ]
 
 [project.urls]
