🐣 Initial and configure the SonarQube settings.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.host.url=https://sonarcloud.io
-sonar.projectKey=<your SonarQube project key>
-sonar.organization=<your name>
+sonar.projectKey=Chisanan232_slack-mcp-server
+sonar.organization=chisanan232
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=<your lib name>
+sonar.projectName=slack-mcp-server
 sonar.projectVersion=0.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
