--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ dev = [
     "pytest>=8.1.1,<9",
     "pytest-cov>=5.0.0,<6",
     "coverage~=6.2",
+    "pytest-rerunfailures>=14.0,<15",
+    "aiohttp>=3.12.13",
+    "pytest-asyncio>=0.23.0,<1",
 ]
 pre-commit-ci = [
     "pre-commit>=3.5.0,<4",
