--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,8 @@ on:
 #     For GitHub Action
       - ".github/workflows/**ci.yaml"
       - ".github/workflows/rw_build_and_test.yaml"
-      - ".github/workflows/rw_poetry_run_test_with_multi_py_versions.yaml"
+      - ".github/workflows/rw_uv_run_test.yaml"
+      - ".github/workflows/rw_uv_run_test_with_multi_py_versions.yaml"
 #     For source code and test
       - "slack_mcp/**/*.py"
       - "!**/__pkg_info__.py"
@@ -35,7 +36,8 @@ on:
 #     For GitHub Action
       - ".github/workflows/**ci.yaml"
       - ".github/workflows/rw_build_and_test.yaml"
-      - ".github/workflows/rw_poetry_run_test_with_multi_py_versions.yaml"
+      - ".github/workflows/rw_uv_run_test.yaml"
+      - "rw_uv_run_test_with_multi_py_versions.yaml"
 #     For source code and test
       - "slack_mcp/**/*.py"
       - "!**/__pkg_info__.py"
