--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,18 +74,18 @@ jobs:
       codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
 
 
-  integration-test_codecov_finish:
-#    name: Organize and generate the testing report and upload it to Codecov
-    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
-    needs: build-and-test
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_upload_test_cov_report.yaml@v7.3
-    secrets:
-      codecov_token: ${{ secrets.CODECOV_TOKEN }}
-    with:
-      test_type: integration-test
-      upload-to-codecov: true
-      codecov_flags: integration-test  # Required if 'upload-to-codecov' is true
-      codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
+#  integration-test_codecov_finish:
+##    name: Organize and generate the testing report and upload it to Codecov
+#    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
+#    needs: build-and-test
+#    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_upload_test_cov_report.yaml@v7.3
+#    secrets:
+#      codecov_token: ${{ secrets.CODECOV_TOKEN }}
+#    with:
+#      test_type: integration-test
+#      upload-to-codecov: true
+#      codecov_flags: integration-test  # Required if 'upload-to-codecov' is true
+#      codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
 
 
   all-test_codecov_finish:
@@ -113,13 +113,13 @@ jobs:
       download_path: ${{ inputs.download_path }}
 
 
-  pre-building_test:
-#    name: Check about it could work finely by installing the Python package with setup.py file
-    needs: [unit-test_codecov_finish, integration-test_codecov_finish, all-test_codecov_finish, sonarcloud_finish]
-    if: ${{ github.ref_name == 'release' || github.ref_name == 'master' }}
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_pre-building_test.yaml@v7.3
-    with:
-      build-type: poetry
-      python_package_name: slack-mcp
-      test_shell_in_python: <the Python script you want to test>
-      test_shell: <the shell you want to test>
+#  pre-building_test:
+##    name: Check about it could work finely by installing the Python package with setup.py file
+#    needs: [unit-test_codecov_finish, all-test_codecov_finish, sonarcloud_finish]
+#    if: ${{ github.ref_name == 'release' || github.ref_name == 'master' }}
+#    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_pre-building_test.yaml@v7.3
+#    with:
+#      build-type: poetry
+#      python_package_name: slack-mcp
+#      test_shell_in_python: <the Python script you want to test>
+#      test_shell: <the shell you want to test>
