--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "slack-mcp"
 version = "0.0.0"
 description = "🦾 A strong MCP server for Slack."
 authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.15"
 readme = "README.md"
 license = { text = "MIT" }
 keywords = [
