--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,3 +52,8 @@ repos:
         - --ignore-missing-imports
         - --show-traceback
       additional_dependencies: [types-PyYAML>=6.0.12.9]
+- repo: https://github.com/astral-sh/uv-pre-commit
+  # uv version.
+  rev: 0.7.13
+  hooks:
+    - id: uv-lock
