--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
     "pytest-rerunfailures>=14.0,<15",
     "aiohttp>=3.12.13",
     "pytest-asyncio>=0.23.0,<1",
+    "python-dotenv>=1.0.1,<2",
 ]
 pre-commit-ci = [
     "pre-commit>=3.5.0,<4",
