✏️ Fix the incorrect source code directory of this Python package.

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,11 @@
 [run]
 parallel = True
 relative_files = True
-include=./fake_api_server
+include=./slack_mcp
 
 omit =
 #    */__init__.py
-    ./fake_api_server/__main__.py
+    ./slack_mcp/__main__.py
 
 
 [report]
