✏️ Fix the incorrect comments.

--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -17,7 +17,7 @@ jobs:
       shell_arg: test/integration_test/
 
   prep_e2e-test:
-#    name: Prepare all unit test items
+#    name: Prepare all end-to-end test items
     uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
     with:
       shell_arg: test/e2e_test/
@@ -41,7 +41,7 @@ jobs:
       install_dependency_with_group: 'dev'
 
   run_e2e-test:
-#    name: Run all unit test items
+#    name: Run all end-to-end test items
     needs: prep_e2e-test
     uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
     with:
@@ -66,7 +66,7 @@ jobs:
       test_type: integration-test
 
   e2e-test_codecov:
-#    name: For unit test, organize and generate the testing report and upload it to Codecov
+#    name: For end-to-end test, organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
     needs: run_e2e-test
     uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
