--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ classifiers = [
 dependencies = [
     "mcp[cli]>=1.9.4",
     "slack-sdk>=3.35.0",
-    "Flask>=2.3.0",
-    "hypercorn>=0.14.3",
-    "asgiref>=3.6.0",  # Required for Flask async support
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
+    "pydantic>=2.6.0",
 ]
 
 [project.urls]
@@ -54,6 +54,7 @@ dev = [
     "aiohttp>=3.12.13",
     "pytest-asyncio>=0.23.0,<1",
     "python-dotenv>=1.0.1,<2",
+    "httpx>=0.26.0",  # For FastAPI testing
 ]
 pre-commit-ci = [
     "pre-commit>=3.5.0,<4",
