➕ Add the missing step about uploading the test coverage report to CodeCov for the integrate test part.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,18 +72,18 @@ jobs:
       codecov_flags: unit-test  # Required if 'upload-to-codecov' is true
       codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
 
-#  integration-test_codecov_finish:
-##    name: Organize and generate the testing report and upload it to Codecov
-#    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
-#    needs: build-and-test
-#    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_upload_test_cov_report.yaml@v7.3
-#    secrets:
-#      codecov_token: ${{ secrets.CODECOV_TOKEN }}
-#    with:
-#      test_type: integration-test
-#      upload-to-codecov: true
-#      codecov_flags: integration-test  # Required if 'upload-to-codecov' is true
-#      codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
+  integration-test_codecov_finish:
+#    name: Organize and generate the testing report and upload it to Codecov
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
+    needs: build-and-test
+    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_upload_test_cov_report.yaml@v7.3
+    secrets:
+      codecov_token: ${{ secrets.CODECOV_TOKEN }}
+    with:
+      test_type: integration-test
+      upload-to-codecov: true
+      codecov_flags: integration-test  # Required if 'upload-to-codecov' is true
+      codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
 
   e2e-test_codecov_finish:
 #    name: Organize and generate the testing report and upload it to Codecov
