--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ dev = [
     "aiohttp>=3.12.13",
     "pytest-asyncio>=0.23.0,<1",
     "python-dotenv>=1.0.1,<2",
-    "httpx>=0.26.0",  # For FastAPI testing
+    "httpx>=0.26.0", # For FastAPI testing
+    "pytest-mock>=3.14.1",
 ]
 pre-commit-ci = [
     "pre-commit>=3.5.0,<4",
