--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -12,7 +12,7 @@ on:
       - "!**/__pkg_info__.py"
 #     For docker configuration and shell script for running by Docker
       - "Dockerfile"
-      - "scripts/docker/run-mcp-server.sh"
+      - "../../scripts/docker/run-slack-mcp-server.sh"
 #     For Python project configuration
       - "pyproject.toml"
       - "uv.lock"
@@ -30,7 +30,7 @@ on:
       - "!**/__pkg_info__.py"
 #     For docker configuration and shell script for running by Docker
       - "Dockerfile"
-      - "scripts/docker/run-mcp-server.sh"
+      - "../../scripts/docker/run-slack-mcp-server.sh"
 #     For Python project configuration
       - "pyproject.toml"
       - "uv.lock"
