--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,6 +98,19 @@ jobs:
       codecov_flags: e2e-test  # Required if 'upload-to-codecov' is true
       codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
 
+  contract-test_codecov_finish:
+#    name: Organize and generate the testing report and upload it to Codecov
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
+    needs: build-and-test
+    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_upload_test_cov_report.yaml@v7.3
+    secrets:
+      codecov_token: ${{ secrets.CODECOV_TOKEN }}
+    with:
+      test_type: contract-test
+      upload-to-codecov: true
+      codecov_flags: contract-test  # Required if 'upload-to-codecov' is true
+      codecov_name: slack-mcp  # Required if 'upload-to-codecov' is true
+
   all-test_codecov_finish:
 #    name: Organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
