--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -22,6 +22,12 @@ jobs:
     with:
       shell_arg: test/e2e_test/
 
+  prep_contract-test:
+#    name: Prepare all integration test items
+    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
+    with:
+      shell_arg: test/contract_test/
+
   run_unit-test:
 #    name: Run all unit test items
     needs: prep_unit-test
@@ -49,6 +55,15 @@ jobs:
       all_test_items_paths: ${{needs.prep_e2e-test.outputs.all_test_items}}
       install_dependency_with_group: 'dev'
 
+  run_contract-test:
+#    name: Run all contract test items
+    needs: prep_contract-test
+    uses: ./.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
+    with:
+      test_type: contract-test
+      all_test_items_paths: ${{needs.prep_contract-test.outputs.all_test_items}}
+      install_dependency_with_group: 'dev'
+
   unit-test_codecov:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
@@ -72,6 +87,14 @@ jobs:
     uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
     with:
       test_type: e2e-test
+
+  contract-test_codecov:
+#    name: For end-to-end test, organize and generate the testing report and upload it to Codecov
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'master') }}
+    needs: run_contract-test
+    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    with:
+      test_type: contract-test
 
   all_test_codecov:
 #    name: Organize and generate the testing report and upload it to Codecov
