➕ Add environment setting for the environment variables.

--- a/.github/workflows/rw_uv_run_test.yaml
+++ b/.github/workflows/rw_uv_run_test.yaml
@@ -60,11 +60,17 @@ on:
         type: boolean
         required: false
         default: false
+      with-environment-variables:
+        description: "Set the specific environment for the environment variables."
+        type: string
+        required: false
+        default: development
 
 env:
   PIP_DISABLE_PIP_VERSION_CHECK: 1
 
 jobs:
+  environment: ${{ inputs.with-environment-variables }}
   run_test_items:
     runs-on: ${{ inputs.runtime_os }}
 
