✏️ Adjust the test coverage report configuration to ignore the Protocol ellipsis lines.

--- a/.coveragerc
+++ b/.coveragerc
@@ -28,6 +28,9 @@ exclude_lines =
     # Don't complain about abstract methods, they aren't run:
     @(abc\.)?abstractmethod
 
+    # Don't complain about Protocol ellipsis lines that aren't meant to be executed:
+    \.\.\.
+
     # Don't complain about the exceptions catching of ImportError and ModuleNotFoundError, they aren't run:
     except ImportError:
     except (ImportError, ModuleNotFoundError):
