✏️ Adjust the default value to be empty string at the parameter *with-environment-variables*.

--- a/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
+++ b/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml
@@ -40,7 +40,7 @@ on:
         description: "Set the specific environment for the environment variables."
         type: string
         required: false
-        default: development
+        default: ''
 
 jobs:
   run_test_items:
