--- a/.github/workflows/rw_uv_run_test.yaml
+++ b/.github/workflows/rw_uv_run_test.yaml
@@ -64,7 +64,7 @@ on:
         description: "Set the specific environment for the environment variables."
         type: string
         required: false
-        default: development
+        default: ''
 
 env:
   PIP_DISABLE_PIP_VERSION_CHECK: 1
