--- a/.github/workflows/rw_uv_run_test.yaml
+++ b/.github/workflows/rw_uv_run_test.yaml
@@ -65,17 +65,16 @@ on:
         type: string
         required: false
         default: ''
+    secrets:
+      end-to-end_test_slack_bot_token:
+        description: "Set the Slack bot token for end-to-end test."
+        required: false
 
 env:
   PIP_DISABLE_PIP_VERSION_CHECK: 1
 
 jobs:
   run_test_items:
-    # ✅ Only at job layer (or step layer) to annotate and set secrets → env
-    env:
-      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-
     environment: ${{ inputs.with-environment-variables }}
     runs-on: ${{ inputs.runtime_os }}
 
@@ -111,8 +110,7 @@ jobs:
         run: uv run pytest ${{ matrix.test-path }}
         continue-on-error: ${{ inputs.keep_run_if_test_fail }}
         env:
-          CODECOV_TOKEN: ${{ env.CODECOV_TOKEN }}
-          SLACK_BOT_TOKEN: ${{ env.SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.end-to-end_test_slack_bot_token }}
           SLACK_TEST_CHANNEL: ${{ vars.SLACK_TEST_CHANNEL }}
           SLACK_TEST_CHANNEL_ID: ${{ vars.SLACK_TEST_CHANNEL_ID }}
 
