🧑‍💻 Add a log message for troubleshooting.

--- a/.github/workflows/rw_uv_run_test.yaml
+++ b/.github/workflows/rw_uv_run_test.yaml
@@ -107,6 +107,7 @@ jobs:
 
       - name: Verify the Slack bot token
         run: |
+          echo "SLACK_BOT_TOKEN: $SLACK_BOT_TOKEN"
           curl -s https://slack.com/api/auth.test -H "Authorization: Bearer $SLACK_BOT_TOKEN"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.end-to-end_test_slack_bot_token }}
