✏️ Update the environment variables example for the new change of the message queue component.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ SLACK_SIGNING_SECRET=<your-slack-signing-secret>
 # message setting
 SLACK_TEST_CHANNEL='#your-channel-name'
 SLACK_TEST_CHANNEL_ID=<your-channel-id>
+
+## message queue backend settings
+# Options: memory (default), redis, kafka
+QUEUE_BACKEND=memory
+# Redis backend settings (when QUEUE_BACKEND=redis)
+REDIS_URL=redis://localhost:6379/0
+# Kafka backend settings (when QUEUE_BACKEND=kafka)
+KAFKA_BOOTSTRAP=broker:9092
